fixing text align right in hebrew version

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -29,3 +29,6 @@ button:disabled {
   font-weight: bold;
 }
 
+.text-align-right {
+  text-align: right;
+}
